--- a/docs/Weather.Rmd
+++ b/docs/Weather.Rmd
@@ -6,7 +6,6 @@ output:
     toc: true
     toc_float: true
     highlight: zenburn
-    runtime: shiny
 ---
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
@@ -17,7 +16,7 @@ library(scales)
 library(DT) 
 library(mosaic)
 library(readxl)
-library(shiny)
+library(htmltools)
 
 IFweather <- read_excel("~/Fall 2024/Professional Projects/Data/weather.xlsx")
 IFweather <- IFweather <- IFweather <- IFweather %>% 
@@ -178,33 +177,34 @@ Something to keep in mind is that since this model relies on historical data, it
 
 
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
-ui <- fluidPage(
-    titlePanel("Temperature Predictor"),
-    sidebarLayout(
-        sidebarPanel(
-            numericInput("dew", "Enter Dew Point:", value = 50, min = -50, max = 100),
-            numericInput("sea", "Enter Sea Level Pressure:", value = 1015, min = 900, max = 1100),
-            actionButton("predict", "Predict Temperature")),
-        mainPanel(
-            h3("Predicted Temperature"),
-            verbatimTextOutput("result"))))
+```{html echo=FALSE}
+<div>
+  <label for="dew">Enter Dew Point (°F):</label>
+  <input type="number" id="dew" min="-50" max="100" value="50">
+  <br>
+  <label for="sea">Enter Sea Level Pressure (hPa):</label>
+  <input type="number" id="sea" min="900" max="1100" value="1015">
+  <br><br>
+  <button onclick="predictTemperature()">Predict Temperature</button>
+  <p><strong>Predicted Temperature:</strong> <span id="prediction">--</span> °F</p>
+</div>
+  
+<script>
+function predictTemperature() {
+    const intercept = -36.37;
+    const coefDew = 1.357;
+    const coefSea = 1.595;
 
-server <- function(input, output) {
-    intercept <- -36.37
-    coef_dew <- 1.357
-    coef_sea <- 1.595
-    
-    predict_temp <- reactive({
-        req(input$predict)  
-        input$dew * coef_dew + input$sea * coef_sea + intercept})
-    
-    output$result <- renderText({
-        round(predict_temp(), 2)})}
+    const dew = parseFloat(document.getElementById("dew").value);
+    const sea = parseFloat(document.getElementById("sea").value);
 
-shinyApp(ui = ui, server = server)
+    const predictedTemp = intercept + coefDew * dew + coefSea * sea;
 
+    document.getElementById("prediction").innerText = predictedTemp.toFixed(2);
+  }
+</script>
 ```
+
 
 
 
@@ -215,4 +215,8 @@ shinyApp(ui = ui, server = server)
 datatable(IFweather, options=list(lengthMenu = c(3,10,30)), extensions="Responsive")
 ```
 ##
+
+
+
+
 
